After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732869 - Segfault when attempting to calibrate printer with Colormunki Photo
Segfault when attempting to calibrate printer with Colormunki Photo
Status: RESOLVED FIXED
Product: gnome-color-manager
Classification: Core
Component: general
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-color-manager-maint
gnome-color-manager-maint
Depends on:
Blocks:
 
 
Reported: 2014-07-07 22:16 UTC by rminkler
Modified: 2014-10-08 17:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
verbose gcm-calibrate output (8.34 KB, text/plain)
2014-07-07 22:16 UTC, rminkler
  Details
gdb output (9.90 KB, text/plain)
2014-10-03 22:23 UTC, rminkler
  Details
test patch (747 bytes, patch)
2014-10-07 17:16 UTC, Richard Hughes
none Details | Review

Description rminkler 2014-07-07 22:16:28 UTC
Created attachment 280091 [details]
verbose gcm-calibrate output

gcm-calibrate segfaults after saving the patch pages when trying to calibrate my r2880 printer with a Colormunki photo.

I've attached the output of 'gcm-calibrate -v --device=cups-Stylus-Photo-R2880'

I'm running gnome 3.12 on Arch, but I've previously observed the same symptom on Fedora 20.
Comment 1 rminkler 2014-10-03 22:21:23 UTC
Still having this issue on Gnome 3.14. I'm not a programmer but I'd be happy to provide any requested debugging output. Also willing to mail my colormunki to someone (with pre-paid return postage) if having one on-hand would make sorting this out easier.
Comment 2 rminkler 2014-10-03 22:23:05 UTC
Created attachment 287697 [details]
gdb output
Comment 3 Richard Hughes 2014-10-07 17:16:50 UTC
Created attachment 287983 [details] [review]
test patch

Can you try compiling and retrying with this patch please?
Comment 4 rminkler 2014-10-08 17:07:49 UTC
Your patch resolves the issue. Thank you!