Prevent a crash when profiling a printer

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=732869